0.11.2
 - fix: make sure self-signed SSL certificates of DCOR-med instances
   are used everywhere (#61)
 - ref: move dcor access token code to dclab
 - setup: bump dclab from 0.40.0 to 0.41.0
0.11.1
 - fix: CLI did not verify individual upload steps (#59)
 - enh: add additional step "wait-dcor" during verification task (#54)
 - ref: get rid of distutils dependency
0.11.0
 - feat: support downloading condensed .rtdc files
 - enh: allow user to choose download location via preferences (#43)
 - ref: download jobs no longer are identified via `resource_id`, but
   via `job_id`, because we now have condensed resources
 - setup: bump dclab from 0.39.15 to 0.40.0
0.10.0
 - feat: display paths to resources in Upload tab (#56)
 - fix: make sure DCOR-Aid starts when the server is not reachable (#57)
 - fix: make sure DCOR-Aid starts when the API token is wrong (#57)
 - enh: add with_api_key and with_correct_version keyword arguments to
   CKANAPI.is_available
 - ref: do not update login status asyncronously in the background
 - ref: new status_widget submodule
 - setup: DCOR-Aid 0.10.0 requires CKAN 2.9.4 on the server side
 - setup: bump dclab from 0.39.3 to 0.39.15
0.9.2
 - ci: turn tests into a submodule
 - ref: add pyqtSlot decorators where misssing
 - ref: cleanup threads to isolate #14
0.9.1
 - fix: don't print upload job when upload is completed in CLI
 - fix: daemonize background thread in CLI dcoraid-upload-task
 - setup: bump dclab from 0.38.2 to 0.39.3
0.9.0
 - feat: add CLI command dcoraid-upload-task for uploading individual
   tasks from the command line, bypassing the GUI (#37)
0.8.6:
 - tests: did not run on Windows
0.8.5
 - enh: introduce APIOutdatedError (server response)
 - enh: inform the user to upgrade DCOR-Aid, if the server does not
   support the current version
 - fix: handle spaces in uploaded resources names (#51)
 - ref: combine response handling for API GET and POST requests
0.8.4
 - fix: properly handle "user_list" for anonymous users